deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matowinweb
  labels:
    app: matowinweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: matowinweb
  template:
    metadata:
      labels:
        app: matowinweb
    spec:
      containers:
      - name: mato-react
        image: shafismart/matowin:1.0
        ports:
        - containerPort: 80
