service.yml
apiVersion: v1
kind: Service
metadata:
  name: matowinweb-services
spec:
  type: NodePort
  selector:
    app: matowinweb
  ports:
    - protocol: TCP
      port: 80          # Port exposed by the service
      targetPort: 80     # Port on the container
      nodePort: 30009    # Port exposed on the node
